Prevent page overflow

--- a/src/stylesheets/components/page-intro.scss
+++ b/src/stylesheets/components/page-intro.scss
@@ -41,46 +41,51 @@ $page-intro-text-max-width: (
 );
 
 #{$component-base} {
-  @include styles-from-map((
-    margin-bottom: $spacing-hecto-steep,
-  ));
-
-  position: relative;
-
-  max-width: calc(#{$wrapper-max-width} + (#{$wrapper-spacing * 2}));
-
-  padding-left: $wrapper-spacing;
-  padding-right: $wrapper-spacing;
-
-  margin-left: auto;
-  margin-right: auto;
-
-  &::before {
-    @include styles-from-map((
-      height: $page-intro-background-height-pre-l,
-    ));
-
-    content: "";
-
-    position: absolute;
-
-    z-index: -1;
-
-    left: 0;
-    bottom: 0;
-
-    width: 100%;
-
-    background: color(neutral, 8);
-
-    @include respond-to(l) {
-      content: none;
-    }
-  }
-
+  overflow: hidden;
   // Element: Inner
   // ---------------------------------------------------------------------------
   &-inner {
+    @include styles-from-map((
+      margin-bottom: $spacing-hecto-steep,
+    ));
+
+    position: relative;
+
+    max-width: calc(#{$wrapper-max-width} + (#{$wrapper-spacing * 2}));
+
+    padding-left: $wrapper-spacing;
+    padding-right: $wrapper-spacing;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    &::before {
+      @include styles-from-map((
+        height: $page-intro-background-height-pre-l,
+      ));
+
+      content: "";
+
+      position: absolute;
+
+      z-index: -1;
+
+      left: 0;
+      bottom: 0;
+
+      width: 100%;
+
+      background: color(neutral, 8);
+
+      @include respond-to(l) {
+        content: none;
+      }
+    }
+  }
+
+  // Element: Inner Inner
+  // ---------------------------------------------------------------------------
+  &-innerInner {
     @include styles-from-map((
       padding-top: $page-intro-padding-top,
     ));
